<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_merchants"
        android:icon="@drawable/ic_nav_merchants"
        android:title="@string/nav_merchants" />
    <item
        android:id="@+id/nav_transactions"
        android:icon="@drawable/ic_nav_transactions"
        android:title="@string/nav_transactions" />
    <item
        android:id="@+id/nav_ops"
        android:icon="@drawable/ic_nav_ops"
        android:title="@string/nav_ops" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
